--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.login button ,.logup button {
+    padding: 10px 15px;
+    background-color: white;
+    color: red;
+    border-radius: 20px;
+    border: 2px solid red;
+    font-size: 15px;
+  }
+  .login button:hover ,.logup button:hover {
+    background-color: red;
+    color: white;
+    border: 3px solid white;
+  }
+  
+  .login{
+    margin-right: 15px;
+  }
+  .hihi{
+    margin-left: 1350px;
+  }
