--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,23 +2,340 @@
 @tailwind components;
 @tailwind utilities;
 
+
+.from h1{
+  padding-top: 40px;
+}
+
+/* BANNER */
+.banner img{
+  width: 1855px;
+}
+.sub-banner img {
+  width: 1300px;
+    text-align: center;
+    margin: auto;
+    margin: 90px 0 40px 0;
+    padding-bottom: 40px; 
+    margin-left: 270px;
+}
+
+
+
+.actions{
+  display: flex;
+ margin-left: 1340px;
+ padding: 45px;
+ 
+}
+.actionsss{
+  display: flex;
+  background: #0313b0;
+}
+
+.actionsss img{
+  width: 150px;
+  margin-left: 120px;
+}
+
 .login button ,.logup button {
-    padding: 10px 15px;
-    background-color: white;
-    color: red;
-    border-radius: 20px;
-    border: 2px solid red;
+  padding: 10px 15px;
+  background-color: white;
+  color: red;
+  border-radius: 20px;
+  border: 2px solid red;
+  font-size: 15px;
+}
+.login button:hover ,.logup button:hover {
+  background-color: red;
+  color: white;
+  border: 3px solid white;
+}
+
+.login{
+  margin-right: 15px;
+}
+
+
+
+
+/* FOOTER */
+
+/* Footer CSS */
+.infoFooter{
+  max-width: 1375px;
+  margin: 0 auto;
+  padding: 40px;
+  border-top: 1px solid #d0d0d0;
+  display: grid;
+  grid-template-columns: 19% 24% 33% 20%;
+  margin-top: 45px;
+}
+.iconFooter {
+  float: left;
+  width: 25px;
+  height: 25px;
+  background: #e52c25;
+  text-align: center;
+  color: #fff;
+  line-height: 25px;
+  border-radius: 100%;
+  margin-top: 8px;
+}
+.iconFooter svg{
+  margin-top: -4px;
+}
+.titleHotline{
+  font-size: 27px;
+  padding: 0 0 0 15px;
+}
+.fa-phone:before {
+  content: "\f095";
+}
+h4{
+  text-transform: uppercase;
+  font-size: 14px;
+}
+.moreInfoFooter{
+  float: left;
+  width: 100%;
+  font-size: 11px;
+  margin: 5px 0 0;
+}
+ul.navbar-social{
+  display: flex;
+  justify-content: space-around;
+  padding-left: 0;
+}
+.footerBottom{
+  display: grid;
+  grid-template-columns: 22% 18% 25% 29%;
+  background-color: #f1f1f1;
+  grid-gap: 30px;
+}
+.infoFooter h4{
+  font-size: 14px;
+}
+.footerBottom  h5{
+  font-weight: 600;
+  padding: 20px 0;
+  font-size: 15px;
+}
+.footerBottom p ,.policise-item li a{
+  font-size: 14px;
+}
+.policies{
+  padding-left: 111px;
+}
+.policise-item {
+  padding: 0;
+}
+.policise-item li{
+  list-style-type: none;
+  padding: 8px 0;
+}
+.policise-item li a{
+  text-decoration: none;
+  color: #000;
+}
+.system{
+  padding-left: 0;
+}
+
+.icon-social li,
+.icon-social li img{
+    list-style: none;
+    text-align: center;
+    width: 45px;
+}
+.social a span svg{
+    margin-top: 16px;
+}
+.navbar-icon__links{
+    color: #000;
+}
+.input_regBot{
+    margin-top:4px;
+    padding: 10px 16px;
+    border: 1px solid #d0d0d0;
     font-size: 15px;
-  }
-  .login button:hover ,.logup button:hover {
-    background-color: red;
-    color: white;
-    border: 3px solid white;
-  }
-  
-  .login{
-    margin-right: 15px;
-  }
-  .hihi{
-    margin-left: 1350px;
-  }
+    height: 36px;
+}
+.btn__register{
+    margin-left: -5px;
+    background: #000;
+    border: none;
+    color: #fff;
+    padding: 6px;
+    height: 36px;
+}
+.our_fanpage{
+    padding-left: 25px;
+}
+.bottomBar{
+    line-height: 44px;
+    text-align: center;
+    padding-right: 142px;
+    font-size: 20px;
+    background-color: #ffffff;
+    color: #000;
+}
+.bttop{
+    display: none;
+    text-align: center;
+    position: fixed;
+    bottom: 130px;
+    cursor: pointer;
+    color: #000;
+    font-size: 16px;
+    font-weight: 900;
+    transform: rotate(-90deg);
+    z-index: 99;
+    right: -30px;
+}
+.text-bttop{
+    float: left;
+    margin: -3px 10px;
+}
+
+.anime{
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+
+/* LOGIN */
+
+.user-foot {
+  font-size: 17px;
+}
+.user-foot a {
+  margin: 10px 0;
+  display: block;
+}
+.user-foot a.clearfix {
+  color: #007bff;
+  text-decoration: none;
+}
+.user-foot a:hover{
+  color: rgb(255, 0, 0);
+}
+.text-center {
+  text-align: center;
+}
+#formAcount .btn-signup {
+  background: #fd6e1d;
+  background: -webkit-gradient(linear,0% 0%,0% 100%,from(#fd6e1d),to(#f59000));
+  background: -webkit-linear-gradient(top,#f59000,#fd6e1d);
+  text-transform: uppercase;
+  font-size: 18px;
+  color: #fff;
+  border: none;
+}
+
+/*  */
+.loginFb {
+  width: 275px;
+  background: #3b5998;
+  display: inline-block;
+}
+.loginGg {
+  width: 250px;
+  background: #000;
+  color: #fff;
+  display: inline-block;
+  margin: 0 0 23px 20px;
+}
+.loginFb a, .loginGg a {
+  color: #fff;
+  padding: 0 5px;
+  text-decoration: none;
+}
+.loginFb a:hover, .loginGg a:hover{
+  color: #fff;
+}
+.loginGg span {
+  border-right: 1px solid #646668;
+}
+.loginFb span, .loginGg span {
+  float: left;
+  width: 50px;
+  height: 100%;
+  font-size: 31px;
+  color: #fff;
+  border-right: 1px solid #15416f;
+}
+
+
+/* STYLE.CSS */
+
+
+.left img {
+  width: 100%;
+  height: auto;
+}
+.right {
+  margin-top: 6em;
+  margin-left: 4.5em;
+}
+.right h1 {
+  text-align: center;
+  margin-right: 4.5em;
+  margin-bottom: 2.5em;
+  margin-left: 1.5em;
+}
+.right input {
+  margin-top: 0.5em;
+  margin-bottom: 2.5em;
+
+  width: 80%;
+}
+.right label {
+  margin-right: 95%;
+}
+.btn-login {
+  margin-left: 220px;
+}
+
+.left-signUp img {
+  width: 100%;
+  height: 45em;
+}
+.right-signUp {
+  margin-left: 170px;
+  /* text-align: center; */
+}
+.right-signUp h1 {
+  text-align: center;
+  margin-right: 4.5em;
+  margin-bottom: 1.5em;
+}
+.right-signUp input {
+  margin-top: 0.5em;
+  margin-bottom: 2.5em;
+  width: 80%;
+}
+.right-signUp label {
+  margin-right: 95%;
+}
+.form-group{
+  margin-left: 220px;
+}
+.btn-signUp {
+  margin-left: 220px;
+}
+.prd-img img {
+  width: 100px;
+}
+.table {
+  text-align: center;
+  margin-top: 1em;
+}
+.btn-success {
+  margin-top: 1em;
+  margin-left: 0.5em;
+}
+.btn-success a {
+  text-decoration: none;
+  color: white;
+}
